--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "chartist": "^0.11.4",
     "react": "^17.0.2",
+    "react-chartist": "^0.14.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.0.4",
     "react-router-dom": "^5.2.0",
