--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-chartist": "^0.14.4",
     "react-dom": "^17.0.2",
+    "react-export-excel": "^0.5.3",
     "react-hook-form": "^7.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
